# chak-chak-mage

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CONTRACTS.md  LICENSE  README.md  SECURITY.md  STUDIO_INSTRUCTIONS.md  chak_pipeline.toml  index.html  landing.html  player.html  pyproject.toml  robots.txt  serve.bat  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
albums/: albums_index.json
albums/MY_ALBUM_001/: album_config.json  master_matrix.js  media_manifest.json  semantic_matrix.json
albums/alignment/: track_01_T1-2-3a_words.json  track_01_T1-2-3b_words.json  track_01_words.json  track_02_T2b_words.json  track_02_T2c_words.json  track_02_words.json  track_03_T1-2-3a_words.json  track_03_T3b_words.json  track_03_words.json  track_04_T4a_words.json  track_04_words.json  track_05_T5a_words.json  track_05_T5b_words.json  track_05_T5c_words.json  track_05_words.json  track_06_T1-2-3b_words.json  track_06_T6a_words.json  track_06_T6b_words.json  track_06_words.json  track_07_words.json  track_08_words.json  track_09_words.json  track_10_words.json  track_11_words.json  track_12_words.json  track_13_words.json  track_14_words.json  track_15_words.json  (+10 more)
css/: style.css
docs/: NEW_ALBUM_GUIDE.md
js/: albums_index.js  audio_analyser.js  data_schema.js  player.js  symbol_embers.js  timing_engine.js  zone1_inner.js  zone2_outer.js  zone3_ambient.js
src/chak/: cli.py  (+4 more)
tests/: test_fusion.py  test_hallucination.py  test_schemas.py  test_similarity.py  test_text_utils.py  test_timeline.py
(+128 files in other folders)
