[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chak-pipeline"
version = "1.0.0"
description = "The Chak Chak Mage – Interactive Album Build Pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
whisper = [
    "stable-ts>=2.16",
    "demucs>=4.0",
]
beats = [
    "librosa>=0.10",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
chak = "chak.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
